--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deepcase/react-hasura",
-  "version": "0.0.2",
+  "version": "0.0.5",
   "license": "ISC",
   "author": "Ivan S Glazunov <ivansglazunov@gmail.com>",
   "homepage": "https://github.com/deepcase/react-hasura",
@@ -8,9 +8,6 @@
     "type": "git",
     "url": "ssh://git@github.com/deepcase/react-hasura.git"
   },
-  "pre-commit": [
-    "build"
-  ],
   "description": "",
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
@@ -20,14 +17,14 @@
     "@types/node": "^14.0.23",
     "@types/react": "^17.0.2",
     "pre-commit": "^1.2.2",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.10"
   },
   "peerDependencies": {
     "@deepcase/hasura": "*",
     "react": "*"
   },
   "scripts": {
-    "package:build": "npx tsc --project tsconfig.json",
+    "package:build": "tsc --project tsconfig.json",
     "package:unbuild": "rm -f ./*.js; rm -f ./*.js.map; rm -f ./*.d.ts",
     "package:publish": "npm run package:build; npm publish --access public; npm run package:unbuild"
   }
