--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "description": "",
   "dependencies": {
-    "debug": "^4.3.1"
+    "debug": "^4.3.1",
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^14.0.23",
