--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "description": "",
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
-    "debug": "^4.3.1"
+    "debug": "^4.3.1",
+    "@deep-foundation/hasura": "0.0.29"
   },
   "devDependencies": {
     "@types/node": "^14.0.23",
@@ -20,7 +21,6 @@
     "typescript": "^3.9.10"
   },
   "peerDependencies": {
-    "@deep-foundation/hasura": "*",
     "react": "*"
   },
   "scripts": {
