Revert dependency updating. Revert f42fd34942a1ff8109afe9f14744abe4b1948dbe..main
This reverts commit 510737089a211144a11cda30d007df47805f8257.

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "description": "",
   "dependencies": {
-    "@apollo/client": "^3.7.4",
-    "@deep-foundation/hasura": "0.0.32",
-    "debug": "^4.3.1"
+    "@apollo/react-hooks": "^4.0.0",
+    "debug": "^4.3.1",
+    "@deep-foundation/hasura": "0.0.29"
   },
   "devDependencies": {
     "@types/node": "^14.0.23",
