--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deep-foundation/react-hasura",
-  "version": "0.0.10",
+  "version": "0.0.5",
   "license": "MIT",
   "author": "Ivan S Glazunov <ivansglazunov@gmail.com>",
   "homepage": "https://github.com/deep-foundation/react-hasura",
@@ -11,8 +11,7 @@
   "description": "",
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
-    "debug": "^4.3.1",
-    "@deep-foundation/hasura": "0.0.29"
+    "debug": "^4.3.1"
   },
   "devDependencies": {
     "@types/node": "^14.0.23",
@@ -21,6 +20,7 @@
     "typescript": "^3.9.10"
   },
   "peerDependencies": {
+    "@deep-foundation/hasura": "*",
     "react": "*"
   },
   "scripts": {
