--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   "description": "",
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
+    "@deep-foundation/hasura": "0.0.33",
     "debug": "^4.3.1"
   },
   "devDependencies": {
     "@types/node": "^14.0.23",
     "@types/react": "^17.0.2",
     "pre-commit": "^1.2.2",
-    "typescript": "^3.9.10"
+    "typescript": "^4.9.4"
   },
   "peerDependencies": {
-    "@deep-foundation/hasura": "*",
     "react": "*"
   },
   "scripts": {
