--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "description": "",
   "dependencies": {
+    "@apollo/client": "^3.7.9",
     "@apollo/react-hooks": "^4.0.0",
     "@deep-foundation/hasura": "0.0.34",
     "debug": "^4.3.1"
