--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "debug": "^4.3.1"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.9",
     "@types/node": "^14.0.23",
     "@types/react": "^18.2.15",
     "pre-commit": "^1.2.2",
