--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "debug": "^4.3.1"
   },
+  "type": "module",
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.3",
     "@types/accepts": "^1.3.5",
@@ -43,7 +44,7 @@
   "peerDependencies": {
     "@apollo/client": "^3.8.5",
     "@apollo/react-hooks": "^4.0.0",
-    "@deep-foundation/hasura": "~0.0.56",
+    "@deep-foundation/hasura": "~0.0.58",
     "react": "*"
   },
   "scripts": {
