--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deep-foundation/react-hasura",
-  "version": "0.0.26",
+  "version": "0.0.24",
   "license": "Unlicense",
   "author": "Ivan S Glazunov <ivansglazunov@gmail.com>",
   "homepage": "https://github.com/deep-foundation/react-hasura",
@@ -12,40 +12,18 @@
   "dependencies": {
     "debug": "^4.3.1"
   },
-  "type": "module",
   "devDependencies": {
-    "@tsconfig/recommended": "^1.0.3",
-    "@types/accepts": "^1.3.5",
-    "@types/body-parser": "^1.19.3",
-    "@types/connect": "^3.4.36",
-    "@types/content-disposition": "^0.5.6",
-    "@types/cookies": "^0.7.8",
     "@types/debug": "^4.1.9",
-    "@types/express": "^4.17.18",
-    "@types/fs-capacitor": "^8.0.0",
-    "@types/http-assert": "^1.5.3",
-    "@types/http-errors": "^2.0.2",
-    "@types/keygrip": "^1.0.3",
-    "@types/koa": "^2.13.9",
-    "@types/koa-compose": "^3.2.6",
-    "@types/long": "^5.0.0",
-    "@types/mime": "^3.0.2",
-    "@types/ms": "^0.7.32",
-    "@types/node": "^14.18.63",
-    "@types/prop-types": "^15.7.8",
-    "@types/react": "^18.2.25",
-    "@types/scheduler": "^0.16.4",
-    "@types/serve-static": "^1.15.3",
-    "@types/ws": "^8.5.6",
-    "@types/zen-observable": "^0.8.4",
+    "@types/node": "^14.0.23",
+    "@types/react": "^18.2.15",
     "pre-commit": "^1.2.2",
-    "typescript": "^5.2.2"
+    "typescript": "^5.0.4"
   },
   "peerDependencies": {
-    "@apollo/client": "^3.8.5",
+    "react": "*",
+    "@deep-foundation/hasura": "~0.0.53",
     "@apollo/react-hooks": "^4.0.0",
-    "@deep-foundation/hasura": "~0.0.58",
-    "react": "*"
+    "@apollo/client": "^3.7.9"
   },
   "scripts": {
     "package:build": "tsc --project tsconfig.json",
