--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "scripts": {
     "package:build": "tsc --project tsconfig.json",
     "package:unbuild": "rm -f ./*.js; rm -f ./*.js.map; rm -f ./*.d.ts",
-    "package:publish": "npm run package:build; npm publish --access public; npm run package:unbuild"
+    "package:publish": "npm run package:build; npm publish --access public; npm run package:unbuild",
+    "package:release": "npm version patch && git push && git push --tags"
   }
 }
